# EpollDemo

./: CMakeLists.txt  build.sh  clean.sh
client/: CMakeLists.txt
common/inc/: MesgNode.h
common/src/: CMakeLists.txt  MesgNode.cpp
server/inc/: MyEpoll.h
server/src/: CMakeLists.txt  MyEpoll.cpp  main.cpp
